--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>java8-features</name>
   <url>http://maven.apache.org</url>
+
+    <properties>
+        <slf4j.version>1.7.1</slf4j.version>
+        <mysql.connector.version>5.1.21</mysql.connector.version>
+    </properties>
+
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -14,5 +21,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.connector.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>${slf4j.version}</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>${slf4j.version}</version>
+      </dependency>
+
+
   </dependencies>
 </project>
