--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
 
     <properties>
         <slf4j.version>1.7.1</slf4j.version>
-        <mysql.connector.version>5.1.21</mysql.connector.version>
+        <mysql.connector.version>5.1.35</mysql.connector.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
 
@@ -21,23 +23,5 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-      <dependency>
-          <groupId>mysql</groupId>
-          <artifactId>mysql-connector-java</artifactId>
-          <version>${mysql.connector.version}</version>
-      </dependency>
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-api</artifactId>
-          <version>${slf4j.version}</version>
-      </dependency>
-
-      <dependency>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-log4j12</artifactId>
-          <version>${slf4j.version}</version>
-      </dependency>
-
-
   </dependencies>
 </project>
